# monza

./: .gitattributes  .gitignore  .gitmodules  AnyBuild.json  CMakeLists.txt  CONTRIBUTING.md  README.md  cgmanifest.json
app-framework/: CMakeLists.txt
app-framework/include/common/: ringbuffer_initializer.h
app-framework/include/common/ccf/pal/: mem.h
app-framework/include/guest/: fstream  ringbuffer_guest.h
app-framework/include/guest/ccf/pal/: mem.h
app-framework/include/host/: enclave_platform.h  hcs_enclave.h  ringbuffer_guest.h
apps/example/: CMakeLists.txt  guest.cc  host.cc  messages.h
cmake/: clangformat.cmake
devops/: AnyBuild.yml  CI.yml  LLVM.yml
docs/: apps.md  bootloader.md  build.md  concurrency.md  crypto.md  experimental.md  guest.md  libc++.md  libc.md  (+2 more)
guest-verona-rt/: CMakeLists.txt
guest-verona-rt/arch/x86_64/: CMakeLists.txt  compartment.asm  compartment.cc  compartment_namespaced.cc  confidential.cc  cores.asm  cores.cc  cores_generic.cc  cores_sev.cc  exceptions.asm  exceptions.cc  fp.cc  fsgs.cc  gdt.cc  heap_generic.cc  hv.cc  hv_sev.cc  hv_sev_guest_request.cc  hypervisor.cc  kvm.cc  linker.ld  main64.asm  main64.cc  pagetable.cc  random.cc  serial.cc  shared.cc  trap.cc
guest-verona-rt/arch/x86_64/inc/: fp.h  gdt.h  hardware_io.h  hv.h  hypervisor.h  kvm.h  macros.asm  msr.h  novirt.h  pagetable_arch.h  per_core_data.h  platform.h  serial_arch.h  sev.h  sev_ghcb.h  sev_msr.h  shared_arch.h  syscall.h  trap.h
guest-verona-rt/bootloader/pure64/: CMakeLists.txt  emulate.asm
guest-verona-rt/crt/: alloc.cc  compartment.cc  dso.cc  early_alloc.cc  monza_main.cc  output.cc  random.cc  snmalloc.cc  snmalloc_compartment.cc  thread.cc  time.cc  tls.cc
guest-verona-rt/cxx-linktest/: CMakeLists.txt  empty.cc  validate_dependencies.py
guest-verona-rt/experimental/: CMakeLists.txt
guest-verona-rt/experimental/include/: arch_compartment.h  callback.h  compartment.h  compartment_callback.h  compartment_utils.h
guest-verona-rt/include/private/: address.h  alloc.h  cores.h  crt.h  early_alloc.h  heap.h  initfini.h  output.h  serial.h  spinlock.h  tls.h
guest-verona-rt/include/public/: address.h  arrays.h  confidential.h  list.h  logging.h  monza_cnet.h  pagetable.h  random.h  semaphore.h  shared.h  snmalloc.h  tcb.h  thread.h  verona_external_threading.h  writebuffers.h
guest-verona-rt/include/public/snmalloc/: snmalloc.h  snmalloc_incl.h
guest-verona-rt/io/: CMakeLists.txt
guest-verona-rt/io/cnet/: CMakeLists.txt  net_cnet.cc  netpoller.cc
guest-verona-rt/io/cnet/include/: monza_cnet_internal.h
guest-verona-rt/io/cnet/proto/: udp_cnet.cc
guest-verona-rt/io/include/: cnet_api.h
guest-verona-rt/monza-libc/: CMakeLists.txt
guest-verona-rt/monza-libc/libc-bottom-half/src/: CMakeLists.txt  env.cc  exit.cc  link.cc  locale.cc  lock.cc  main.cc  pthread.cc  sched.cc  stdio.cc  time.cc
guest-verona-rt/monza-libc/libc-top-half/src/: CMakeLists.txt
guest-verona-rt/monza-libc/libc-top-half/src/errno/: CMakeLists.txt  errno.cc
guest-verona-rt/monza-libc/libc-top-half/src/mmap/: CMakeLists.txt  mmap.cc
guest-verona-rt/monza-libc/libc-top-half/src/startup/: CMakeLists.txt  abort.cc  exit.cc
guest-verona-rt/monza-libc/libc-top-half/src/time/: CMakeLists.txt  time.cc
guest-verona-rt/monza-libcxx/: CMakeLists.txt
guest-verona-rt/monza-libcxx/include/: __external_threading
guest-verona-rt/monza-libcxx/overridden_includes/: CMakeLists.txt  thread
guest-verona-rt/monza-libcxx/src/: CMakeLists.txt  condition_variable.cc  threading.cc
guest-verona-rt/openssl/: CMakeLists.txt
guest-verona-rt/openssl/include/private/: fcntl.h  stubs.h
guest-verona-rt/scripts/: gdb-qemu.py
guest-verona-rt/test/: monza_harness.h  test.h
guest-verona-rt/test/bench/attestation/: main.cc
guest-verona-rt/test/bench/boot/: main.cc
guest-verona-rt/test/bench/compartment/: main.cc
guest-verona-rt/test/bench/core/: main.cc
guest-verona-rt/test/bench/gs/: main.cc
guest-verona-rt/test/compartment/callback/: main.cc
guest-verona-rt/test/compartment/create/: main.cc
guest-verona-rt/test/compartment/create/compartment/: compartment.cc
guest-verona-rt/test/compartment/data/: main.cc
guest-verona-rt/test/compartment/libc/: main.cc
guest-verona-rt/test/compartment/libc/compartment/: compartment.cc
guest-verona-rt/test/compartment/logging/: main.cc
guest-verona-rt/test/compartment/logging/compartment/: compartment.cc
guest-verona-rt/test/compartment/malloc/: main.cc
guest-verona-rt/test/compartment/malloc/compartment/: compartment.cc
guest-verona-rt/test/compartment/multi/: main.cc
guest-verona-rt/test/compartment/multi/compartment-1/: compartment.cc
guest-verona-rt/test/compartment/multi/compartment-2/: compartment.cc
guest-verona-rt/test/compartment/snmalloc/: main.cc
guest-verona-rt/test/compartment/snmalloc/compartment/: compartment.cc
guest-verona-rt/test/compartment/time/: main.cc
guest-verona-rt/test/compartment/time/compartment/: compartment.cc
guest-verona-rt/test/compartment/tls/: main.cc
guest-verona-rt/test/compartment/tls/compartment/: compartment.cc
guest-verona-rt/test/confidential/attestation/: main.cc
guest-verona-rt/test/crt/exception/: main.cc
guest-verona-rt/test/crt/initfini/: main.cc
guest-verona-rt/test/crt/malloc/: main.cc
guest-verona-rt/test/crt/stream/: main.cc
guest-verona-rt/test/crt/time/: main.cc
guest-verona-rt/test/io/shmem/: main.cc
guest-verona-rt/test/io/udp-cnet-benchmark/: main.cc
guest-verona-rt/test/io/udp-cnet-benchmark-tx/: main.cc
guest-verona-rt/test/openssl/rand/: main.cc
guest-verona-rt/test/thread/add/: main.cc
guest-verona-rt/test/thread/cpp/: main.cc
guest-verona-rt/test/thread/wake/: main.cc
guest-verona-rt/test/utils/arrays/: main.cc
guest-verona-rt/test/verona/scheduling/: main.cc
host/cnet-benchmark/: CMakeLists.txt  alloc.cc  cnet-helper-bench-flood.sh  cnet-helper-bench.sh  throughput-bench.cc
windows/app-framework/: CMakeLists.txt
windows/app-framework/host/: hcs_enclave.cc
windows/apps/example/: CMakeLists.txt
(+10 files in other folders)
